--- a/public/assets/css/now-ui-dashboard.css
+++ b/public/assets/css/now-ui-dashboard.css
@@ -3931,7 +3931,7 @@ Created using IcoMoon - icomoon.io
 
 .sidebar .nav li.active>a,
 .off-canvas-sidebar .nav li.active>a {
-    background-color: #FFFFFF;
+    background-color: #1abc9c;
     box-shadow: 0 1px 15px 1px rgba(39, 39, 39, 0.1);
 }
 
