--- a/public/assets/css/now-ui-dashboard.css
+++ b/public/assets/css/now-ui-dashboard.css
@@ -4209,6 +4209,9 @@ Created using IcoMoon - icomoon.io
 .perfect-scrollbar-on .main-panel {
     height: 100%;
     max-height: 100%;
+    background-image: url("https://images.unsplash.com/photo-1542074494-62e9e51a61b3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80");
+    ;
+    background-size: cover;
 }
 
 @media (min-width: 991px) {
